samples/_failures_safe/1761169679_d115b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5811e91e.c: In function ‘main’:
./samples/SAFE/__tmp_5811e91e.c:135:20: error: missing terminating " character
  135 |             printf("Failed to add log entry
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5811e91e.c:135:13: error: expected expression at end of input
  135 |             printf("Failed to add log entry
      |             ^~~~~~
./samples/SAFE/__tmp_5811e91e.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5811e91e.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5811e91e.c:135:13: error: expected declaration or statement at end of input
